--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:eroak/rpi-433.git"
+    "url": "git@github.com:andywaplinger/rpi-433.git"
   },
   "devDependencies": {},
   "scripts": {
@@ -35,8 +35,8 @@
     "gpio"
   ],
   "author": {
-    "name": "eroak",
-    "email": "mr.eroak@gmail.com"
+    "name": "andywaplinger",
+    "email": "andywaplinger@yahoo.com"
   },
   "license": "ISC"
 }
